--- a/app_users/templates/history.html
+++ b/app_users/templates/history.html
@@ -22,6 +22,33 @@
 
             <div class="uk-card-body" style="width:1140px; margin: auto">
                 <div>
+
+                    <a href uk-icon="icon: settings" uk-tooltip="Sortuj"></a>
+                    <div class="uk-drop" uk-drop="mode: click; pos: bottom; offset: 5">
+                        <div class="uk-grid" style="margin-left: 55px; width: 8500px">
+                            <a href="/history/"
+                               style="color: {% if sort_value == None %} #FF7F50 {% else %} gray {% endif %} ;">Domyślne</a>
+                            <a href="/users/history/?sort_by=user_agent"
+                               style="color: {% if sort_value == 'user_agent' %} #FF7F50 {% else %} gray {% endif %} ;">Klijent</a>
+                            <a href="/users/history/?sort_by=ip_address"
+                               style="color: {% if sort_value == 'ip_address' %} #FF7F50 {% else %} gray {% endif %} ;">IP</a>
+                            <a href="/users/history/?sort_by=cnt_activity"
+                               style="color: {% if sort_value == 'cnt_activity' %} #FF7F50 {% else %} gray {% endif %} ;">Aktywność</a>
+                            <a href="/users/history/?sort_by=login_date"
+                               style="color: {% if sort_value == 'creation_date' %} #FF7F50 {% else %} gray {% endif %} ;">Data</a>
+                            <a href="/users/history/?sort_by=failed_login_attempts"
+                               style="color: {% if sort_value == 'failed_login_attempts' %} #FF7F50 {% else %} gray {% endif %} ;">Błędy</a>
+                            <a href="/users/history/?sort_by=cnt_entries"
+                               style="color: {% if sort_value == 'cnt_entries' %} #FF7F50 {% else %} gray {% endif %} ;">Wpisy</a>
+                            <a href="/users/history/?sort_by=cnt_modification"
+                               style="color: {% if sort_value == 'cnt_modification' %} #FF7F50 {% else %} gray {% endif %} ;">Edycja</a>
+                            <a href="/users/history/?sort_by=cnt_deleted"
+                               style="color: {% if sort_value == 'cnt_deleted' %} #FF7F50 {% else %} gray {% endif %} ;">Usuwanie</a>
+                            <a href="/users/history/?sort_by=cnt_all_deleted"
+                               style="color: {% if sort_value == 'cnt_all_deleted' %} #FF7F50 {% else %} gray {% endif %} ;">Czyszczenie</a>
+                        </div>
+                    </div>
+
                     <a href uk-icon="icon: search" uk-tooltip="Wyszukaj" style="margin-left: 5px"></a>
                     <div class="uk-drop" uk-drop="mode: click; pos: right-center; offset: 5">
                         <form class="uk-search uk-width-1-1">
@@ -31,9 +58,10 @@
                                    autofocus>
                         </form>
                     </div>
+
                     {% if filter_value %}
-                        <span style="color: #4169E1; margin-left: 50px">Zastosowany Filtr:</span>
-                        <span style="color: #FF7F50"> {{ filter_value }} </span>
+                        <span style="color: #4169E1; margin-left: 20px">Zastosowany Filtr: </span>
+                        <span style="color: #FF7F50; margin-left: 5px"> {{ filter_value }} </span>
                     {% endif %}
 
                     <span class="uk-position-relative uk-align-right"> Ilość wpisów: {{ pages_max_elements }} </span>
@@ -50,7 +78,8 @@
                         <th style="width:5%; text-align: center" class="uk-text-middle">Błędy logowania</th>
                         <th style="width:5%; text-align: center" class="uk-text-middle">Liczba nowych wpisów</th>
                         <th style="width:5%; text-align: center" class="uk-text-middle">Liczba modyfikacji</th>
-                        <th style="width:5%; text-align: center" class="uk-text-middle">Liczba pojedynczych skasowań</th>
+                        <th style="width:5%; text-align: center" class="uk-text-middle">Liczba pojedynczych skasowań
+                        </th>
                         <th style="width:5%; text-align: center" class="uk-text-middle">Liczba wszystkich skasowań</th>
                     </tr>
                     </thead>
