--- a/app_weight/templates/app_weight/all_weights.html
+++ b/app_weight/templates/app_weight/all_weights.html
@@ -12,20 +12,6 @@
             <h2 class="uk-heading-divider" style="position: relative">Waga</h2>
         </div>
 
-        <a uk-icon="info" uk-tooltip="Info" href="#modal-info" uk-toggle></a>
-        <div id="modal-info" class="uk-flex-top" uk-modal>
-            <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
-                {#            <button class="uk-modal-close-default" type="button" uk-close></button>#}
-                <p>Całkowita masa ciała jest obliczana na zasadzie zsumowania tłuszczu niezbędnego oraz tłuszczu
-                    zapasowego.</p>
-                <p>U osób, które czynnie ćwiczą tłuszcz niezbędny do metabolizmu oraz tłuszcz zapasowy, który
-                    potencjalnie jest
-                    zawsze w nadmiarze jest niezbędny do normalnego funkcjonowania organizmu. </p>
-                <p>Normalnie, tłuszcz niezbędny powinien stanowić 16% całkowitej masy ciała u mężczyzn i 27% u
-                    kobiet.</p>
-            </div>
-        </div>
-
         <div class="uk-section">
             <div style="max-width: 1000px; margin: 50px auto">
                 <canvas id="line-chart" width="2800" height="900"></canvas>
@@ -87,8 +73,23 @@
             </script>
         </div>
 
-        <a href="add" uk-icon="icon: copy" uk-tooltip="Dodaj"></a>
-        <a href="#model-confirmation-all" uk-toggle uk-icon="icon: trash" uk-tooltip="Wyczyść" style="margin-left: 5px"></a>
+        <a uk-icon="info" uk-tooltip="Info" href="#modal-info" uk-toggle></a>
+        <div id="modal-info" class="uk-flex-top" uk-modal>
+            <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
+                {#            <button class="uk-modal-close-default" type="button" uk-close></button>#}
+                <p>Całkowita masa ciała jest obliczana na zasadzie zsumowania tłuszczu niezbędnego oraz tłuszczu
+                    zapasowego.</p>
+                <p>U osób, które czynnie ćwiczą tłuszcz niezbędny do metabolizmu oraz tłuszcz zapasowy, który
+                    potencjalnie jest
+                    zawsze w nadmiarze jest niezbędny do normalnego funkcjonowania organizmu. </p>
+                <p>Normalnie, tłuszcz niezbędny powinien stanowić 16% całkowitej masy ciała u mężczyzn i 27% u
+                    kobiet.</p>
+            </div>
+        </div>
+
+        <a href="add" uk-icon="icon: copy" uk-tooltip="Dodaj" style="margin-left: 5px"></a>
+        <a href="#model-confirmation-all" uk-toggle uk-icon="icon: trash" uk-tooltip="Wyczyść"
+           style="margin-left: 5px"></a>
 
         <div id="model-confirmation-all" uk-modal>
             <div class="uk-modal-dialog">
@@ -100,12 +101,23 @@
                     <p> Ta czynność jest nie odwracalna.</p>
                 </div>
                 <div class="uk-modal-footer uk-text-center">
-                    <a href="/weights/" class="uk-icon-link uk-margin-small-right" uk-icon="close" uk-tooltip="Anuluj"></a>
+                    <a href="/weights/" class="uk-icon-link uk-margin-small-right" uk-icon="close"
+                       uk-tooltip="Anuluj"></a>
                     <a href="delete/all" uk-icon="check" uk-tooltip="Wyczyść" style="margin-left: 5px"></a>
                 </div>
             </div>
         </div>
 
+        <a href uk-icon="icon: settings" uk-tooltip="Sortuj"></a>
+        <div class="uk-drop" uk-drop="mode: click; pos: bottom; offset: 5">
+            <div class="uk-grid" style="margin-left: 55px; width: 8500px">
+                <a href="/weights/" style="color: {% if sort_value == None %} #FF7F50 {% else %} gray {% endif %} ;">Domyślne</a>
+                <a href="/weights/?sort_by=weight" style="color: {% if sort_value == 'weight' %} #FF7F50 {% else %} gray {% endif %} ;">Waga</a>
+                <a href="/weights/?sort_by=creation_date" style="color: {% if sort_value == 'creation_date' %} #FF7F50 {% else %} gray {% endif %} ;">Data</a>
+                <a href="/weights/?sort_by=comments" style="color: {% if sort_value == 'comments' %} #FF7F50 {% else %} gray {% endif %} ;">Uwagi</a>
+            </div>
+        </div>
+    
         <a href uk-icon="icon: search" uk-tooltip="Wyszukaj" style="margin-left: 5px"></a>
         <div class="uk-drop" uk-drop="mode: click; pos: right-center; offset: 5">
             <form class="uk-search uk-width-1-1">
@@ -114,22 +126,23 @@
                        autofocus>
             </form>
         </div>
+    
         {% if filter_value %}
-            <span style="color: #4169E1; margin-left: 50px">Zastosowany Filtr:</span>
-            <span style="color: #FF7F50"> {{ filter_value }} </span>
+            <span style="color: #4169E1; margin-left: 20px">Zastosowany Filtr: </span>
+            <span style="color: #FF7F50; margin-left: 5px"> {{ filter_value }} </span>
         {% endif %}
 
         <span class="uk-position-relative uk-align-right"> Ilość wpisów: {{ pages_max_elements }} </span>
 
-        <table class="uk-table uk-table-striped uk-table-hover uk-table-small" uk-sortable >
+        <table class="uk-table uk-table-striped uk-table-hover uk-table-small" uk-sortable>
             <thead>
-                <tr>
-                    <th style="width:5%; text-align: center">Lp.</th>
-                    <th style="width:7%; text-align: center">Waga</th>
-                    <th style="width:20%; text-align: center">Data</th>
-                    <th style="width:58%; text-align: center">Uwagi</th>
-                    <th style="width:10%; text-align: center">Opcje</th>
-                </tr>
+            <tr>
+                <th style="width:5%; text-align: center">Lp.</th>
+                <th style="width:7%; text-align: center">Waga</th>
+                <th style="width:20%; text-align: center">Data</th>
+                <th style="width:58%; text-align: center">Uwagi</th>
+                <th style="width:10%; text-align: center">Opcje</th>
+            </tr>
             </thead>
 
             <tbody>
@@ -146,12 +159,16 @@
                         {#                <td>{{ value.date}}</td>#}
                         <td class="uk-text-break">{{ value.comments }}</td>
                         <td>
-                            <a href="{% url 'edit_weight_url' id=value.id %}" uk-icon="icon: file-edit" uk-tooltip="Edytuj"></a>
-                            <button href="{% url 'weight_details_url' id=value.id %}" uk-icon="icon: info" uk-tooltip="Szczegóły" type="submit"></button>
+                            <a href="{% url 'edit_weight_url' id=value.id %}" uk-icon="icon: file-edit"
+                               uk-tooltip="Edytuj"></a>
+                            <button href="{% url 'weight_details_url' id=value.id %}" uk-icon="icon: info"
+                                    uk-tooltip="Szczegóły" type="submit"></button>
                             <a href="" uk-icon="icon: trash" uk-tooltip="Usuń"></a>
-                            <div class="uk-card uk-card-small uk-width-small uk-card-body uk-card-default uk-border-circle uk-box-shadow-medium" uk-drop="mode: click">
+                            <div class="uk-card uk-card-small uk-width-small uk-card-body uk-card-default uk-border-circle uk-box-shadow-medium"
+                                 uk-drop="mode: click">
                                 <p>Czy jesteś pewien? </p>
-                                <a href="{% url 'delete_weight_url' id=value.id %}" uk-icon="check" uk-tooltip="Potwierdź" style="color: #FF7F50"></a>
+                                <a href="{% url 'delete_weight_url' id=value.id %}" uk-icon="check"
+                                   uk-tooltip="Potwierdź" style="color: #FF7F50"></a>
                             </div>
                         </td>
                     </form>
