--- a/app_pressure/templates/app_pressure/edit_pressure.html
+++ b/app_pressure/templates/app_pressure/edit_pressure.html
@@ -16,7 +16,7 @@
         <div class="uk-card uk-card-default uk-border-rounded">
             <div class="uk-card-header">
                 <div class="uk-width-expand">
-                    <h3 class="uk-card-title uk-position-relative uk-position-top-center">Edycja wpisu</h3>
+                    <h3 class="uk-card-title uk-position-relative uk-position-top-center">Edycja wpisu nr {{ number }}</h3>
                 </div>
             </div>
             <div class="uk-card-body">
