odstęp miedzy ikonami

--- a/app_pulse/templates/app_pulse/all_pulses.html
+++ b/app_pulse/templates/app_pulse/all_pulses.html
@@ -106,7 +106,7 @@
             </div>
         </div>
     
-        <a href uk-icon="icon: settings" uk-tooltip="Sortuj"></a>
+        <a href uk-icon="icon: settings" uk-tooltip="Sortuj" style="margin-left: 5px"></a>
         <div class="uk-drop" uk-drop="mode: click; pos: bottom; offset: 5">
             <div class="uk-grid" style="margin-left: 55px; width: 8500px">
                 <a href="/pulses/" style="color: {% if sort_value == None %} #FF7F50 {% else %} gray {% endif %} ;">Domyślne</a>
